fix: use Uno 5.2 for MauiEmbedding Sample

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -1,4 +1,6 @@
 <Project>
+	<Import Project="../../src/maui-embedding.props" />
+
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
