--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -1,13 +1,13 @@
 <Project ToolsVersion="15.0">
 	<ItemGroup>
-		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
 		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
-		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.5.240311000" />
-		<PackageVersion Include="SkiaSharp" Version="2.88.7" />
-		<PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
-		<PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.7" />
-		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.7" />
+		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="$(WinAppSdkVersion)" />
+		<PackageVersion Include="SkiaSharp" Version="2.88.8" />
+		<PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.8" />
+		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
 		<PackageVersion Include="Uno.Material.WinUI" Version="4.0.4" />
@@ -15,18 +15,17 @@
 		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />
 		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.15" />
 		<PackageVersion Include="Uno.Resizetizer" Version="1.2.0" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.2.22" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-		<PackageVersion Include="Uno.WinUI" Version="5.2.22" />
-		<PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.2.22" />
-		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.2.22" />
-		<PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
+		<PackageVersion Include="Uno.WinUI" Version="$(UnoVersion)" />
+		<PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="" />
+		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="$(UnoVersion)" />
 		<PackageVersion Include="Telerik.UI.for.Maui" Version="5.1.0" Condition="$(_UseTelerik)" />
 		<PackageVersion Include="Esri.ArcGISRuntime.Maui" Version="200.1.0" />
 		<PackageVersion Include="Microsoft.Windows.Compatibility" Version="7.0.4" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
-		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.2.22" />
-		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.7" />
-		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.7" />
+		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="$(UnoVersion)" />
+		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.13" />
+		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.13" />
 	</ItemGroup>
 </Project>
