--- a/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
@@ -16,8 +16,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3"/>
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility"  Version="8.0.3"/>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20"/>
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility"  Version="8.0.20"/>
 		<PackageReference Include="Syncfusion.Maui.Core" Version="22.2.9" />
 		<PackageReference Include="Syncfusion.Maui.Charts" Version="22.2.9" />
 		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
