--- a/doc/Learn/Markup/toc.yml
+++ b/doc/Learn/Markup/toc.yml
@@ -17,6 +17,8 @@
       href: xref:Uno.Extensions.Markup.StaticAndThemeResources
     - name: Using Uno.Themes.WinUI.Markup
       href: xref:Uno.Extensions.Markup.UnoThemes
+    - name: Source and Relative Source
+      href: xref:Uno.Extensions.Markup.SourceUsage
 - name: Attached Properties
   href: xref:Uno.Extensions.Markup.AttachedProperties
 - name: Resource Dictionaries
