chore: Fix trimmer warnings
Enable `$(IsAotCompatible)`=true for the following projects:

  * `src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj`
  * `src/Uno.Extensions.Configuration/Uno.Extensions.Configuration.csproj`
  * `src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.csproj`
  * `src/Uno.Extensions.Http/Uno.Extensions.Http.csproj`
  * `src/Uno.Extensions.Http.UI/Uno.Extensions.Http.WinUI.csproj`
  * `src/Uno.Extensions.Localization.UI/Uno.Extensions.Localization.WinUI.csproj`

Fix the following warnings:

	src/Uno.Extensions.Http/ServiceCollectionExtensions.cs(40,6): error IL2091:
	  'TClient' generic argument does not satisfy 'DynamicallyAccessedMemberTypes.PublicConstructors' in 'Uno.Extensions.ServiceCollectionExtensions.AddClientWithEndpoint<TClient, TImplementation, TEndpoint>(IServiceCollection, HostBuilderContext, TEndpoint, String, Func<IHttpClientBuilder, EndpointOptions, IHttpClientBuilder>)'.
	  The generic parameter 'TClient' of 'Uno.Extensions.ServiceCollectionExtensions.AddClient<TClient, TImplementation>(IServiceCollection, HostBuilderContext, EndpointOptions, String, Func<IHttpClientBuilder, EndpointOptions, IHttpClientBuilder>)' does not have matching annotations.
	  The source value must declare at least the same requirements as those declared on the target location it is assigned to.
	src/Uno.Extensions.Http/ServiceCollectionExtensions.cs(40,6): error IL2091:
	  'TImplementation' generic argument does not satisfy 'DynamicallyAccessedMemberTypes.PublicConstructors' in 'Uno.Extensions.ServiceCollectionExtensions.AddClientWithEndpoint<TClient, TImplementation, TEndpoint>(IServiceCollection, HostBuilderContext, TEndpoint, String, Func<IHttpClientBuilder, EndpointOptions, IHttpClientBuilder>)'.
	  The generic parameter 'TImplementation' of 'Uno.Extensions.ServiceCollectionExtensions.AddClient<TClient, TImplementation>(IServiceCollection, HostBuilderContext, EndpointOptions, String, Func<IHttpClientB

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -4,6 +4,7 @@
 	<PropertyGroup>
 		<PackageId>Uno.Extensions.Authentication.MSAL.WinUI</PackageId>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
+		<IsAotCompatible>true</IsAotCompatible>
 
 		<Description>MSAL Authentication Extensions for the Uno Platform (WinUI)</Description>
 		<EnableDefaultPageItems>false</EnableDefaultPageItems>
