--- a/src/Uno.Extensions.Configuration/Uno.Extensions.Configuration.csproj
+++ b/src/Uno.Extensions.Configuration/Uno.Extensions.Configuration.csproj
@@ -4,6 +4,8 @@
 	<PropertyGroup>
 		<Description>Configuration Extensions for reading configuration and writing settings for the Uno Platform, UWP and WinUI</Description>
 
+		<IsAotCompatible>true</IsAotCompatible>
+
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
 	</PropertyGroup>
