chore: Fix trimmer warnings in Uno.Extensions.Serialization
Enable `$(IsAotCompatible)`=true for the following projects:

  * `src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj`

Address the following warnings:

	src/Uno.Extensions.Serialization/SystemTextJsonSerializer.cs(120,14): error IL2046:
	  Member 'Uno.Extensions.Serialization.SystemTextJsonSerializer.ToString(Object, Type)' with 'RequiresUnreferencedCodeAttribute' implements interface member 'Uno.Extensions.Serialization.ISerializer.ToString(Object, Type)' without 'RequiresUnreferencedCodeAttribute'.
	  'RequiresUnreferencedCodeAttribute' annotations must match across all interface implementations or overrides.
	src/Uno.Extensions.Serialization/SystemTextJsonSerializer.cs(88,16): error IL2046:
	  Member 'Uno.Extensions.Serialization.SystemTextJsonSerializer.ToString(Object, Type)' with 'RequiresUnreferencedCodeAttribute' implements interface member 'Uno.Extensions.Serialization.ISerializer.ToString(Object, Type)' without 'RequiresUnreferencedCodeAttribute'.
	  'RequiresUnreferencedCodeAttribute' annotations must match across all interface implementations or overrides.
	src/Uno.Extensions.Serialization/SystemTextJsonSerializer.cs(107,17): error IL2046:
	  Member 'Uno.Extensions.Serialization.SystemTextJsonSerializer.FromString(String, Type)' with 'RequiresUnreferencedCodeAttribute' implements interface member 'Uno.Extensions.Serialization.ISerializer.FromString(String, Type)' without 'RequiresUnreferencedCodeAttribute'.
	  'RequiresUnreferencedCodeAttribute' annotations must match across all interface implementations or overrides.
	src/Uno.Extensions.Serialization/SystemTextJsonSerializer.cs(120,14): error IL2046:
	  Member 'Uno.Extensions.Serialization.SystemTextJsonSerializer.FromString(String, Type)' with 'RequiresUnreferencedCodeAttribute' implements interface member 'Uno.Extensions.Serialization.ISerializer.FromString(String, Type)' without 'RequiresUnreferencedCodeAttribute'.
	  'Req

--- a/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
+++ b/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
@@ -3,6 +3,7 @@
 
 	<PropertyGroup>
 		<Description>Serialization Extensions for working with ISerializer for the Uno Platform, UWP and WinUI</Description>
+		<IsAotCompatible>true</IsAotCompatible>
 
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
