chore: Support $(JsonSerializerIsReflectionEnabledByDefault)=false
Context: https://github.com/unoplatform/uno.extensions/pull/2970
Context: https://github.com/unoplatform/uno.extensions/issues/3001

Fixes: https://github.com/unoplatform/uno.extensions/issues/2908

When [`$(JsonSerializerIsReflectionEnabledByDefault)`][0]=false,
then various `JsonSerializer` methods will throw.

For example:

	partial class SerializerExtensionsTests {
	  [TestMethod]
	  public void ToFromStringTest()
	  {
	    var services    = new ServiceCollection().BuildServiceProvider();
	    var Serializer  = new SystemTextJsonSerializer(services);
	    var classEntity = new SimpleClass { SimpleTextProperty = SimpleText + "Hello World!Class" };
	    var stringValue = Serializer.ToString(classEntity);
	    // …
	  }
	}

Fails with:

	  Failed ToFromStringTest [< 1 ms]
	  Error Message:
	   Test method Uno.Extensions.Serialization.Tests.SerializerExtensionsTests.ToFromStringTest threw exception:
	System.InvalidOperationException: Reflection-based serialization has been disabled for this application. Either use the source generator APIs or explicitly configure the 'JsonSerializerOptions.TypeInfoResolver' property.
	  Stack Trace:
	   at System.Text.Json.ThrowHelper.ThrowInvalidOperationException_JsonSerializerIsReflectionDisabled()
	   at System.Text.Json.JsonSerializerOptions.ConfigureForJsonSerializer()
	   at System.Text.Json.JsonSerializer.GetTypeInfo(JsonSerializerOptions options, Type inputType)
	   at System.Text.Json.JsonSerializer.Serialize(Object value, Type inputType, JsonSerializerOptions options)
	   at Uno.Extensions.Serialization.SystemTextJsonSerializer.ToString(Object value, Type valueType) in /Volumes/Xamarin-Work/src/unoplatform/uno.extensions/src/Uno.Extensions.Serialization/SystemTextJsonSerializer.cs:line 101
	   at Uno.Extensions.Serialization.SerializerExtensions.ToString[T](ISerializer serializer, T value) in /Volumes/Xamarin-Work/src/unoplatform/uno.extensions/src/Uno.Ext

--- a/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
+++ b/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
@@ -3,9 +3,12 @@
 
 	<PropertyGroup>
 		<Description>Serialization Extensions for working with ISerializer for the Uno Platform, UWP and WinUI</Description>
+		<IsAotCompatible>true</IsAotCompatible>
 
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
+		<!-- error CS0436: The type 'ServiceCollectionExtensions' in '…src/Uno.Extensions.Serialization/ServiceCollectionExtensions.cs' conflicts with the imported type 'ServiceCollectionExtensions' in 'Uno.Extensions.Core, Version=255.255.255.255, Culture=neutral, PublicKeyToken=null'. Using the type defined in 'src/Uno.Extensions.Serialization/ServiceCollectionExtensions.cs'. -->
+		<NoWarn>$(NoWarn);CS0436</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
