feat: ILoggingBuilder.AddSerilog() extension method
Context: https://github.com/unoplatform/uno.extensions/issues/3008
Context: https://github.com/unoplatform/uno.extensions/pull/3011
Context: https://github.com/unoplatform/uno.templates/pull/1921

Issue #3008 details that there are two `ILogger` "environments" in
a Uno app:

  * The `App.InitializeLogging()` environment ("NoDI"), and
  * The environment configured by Dependency Injection methods such
    as `.UseLogging()` and `.UseSerilog()` ("DI").

The problem is that "DI" logging *cannot* capture log messages
produced before the DI environment is built, frequently via
`builder.Build()` or `builder.NavigateAsync<TShell>()`.
*A lot* of code can execute before those methods complete.

A further problem is that no default template actually configures
both environments: if you use `dotnet new unoapp -di False` you
get the NoDI `App.InitializeLogging()` environment, which
*will not* log messages from the Dependency Injection enviornment.
If you use `dotnet new unoapp -preset "recommended"` you get
*only* the DI-based logging, thus missing all messages from the
NoDI environment.

Thus, the idea for "`ILogger` configuration unification": What If
instead of having two separate places for logging, we just had one:
the NoDI `App.InitializeLogging()` location.

This can be made to work via #3011, which updates
`HostBuilder.Build()` so that *if*
`LogExtensionPoint.AmbientLoggerFactory` is set, it *replaces* the
`ILoggerFactory` that `HostBuilder.Build()` normally configures.
This allows `App.InitializeLogging()` to also be used in the DI
environment.

So far, so useful.

But what about [Serilog][0]?  Serilog is a widely recommended logger
library, and the current `.UseSerilog()` extension method *requires*
a full Dependency Injection environment: it cannot be invoked within
`App.InitializeLogging()`.

Try to square this circle by adding a new
`ILoggingBuilder.AddSerilog()` extension method.  This would allow
Serilog to be c

--- a/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
+++ b/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
@@ -25,6 +25,7 @@
 	<ItemGroup>
 		<InternalsVisibleTo Include="Uno.Extensions.Hosting.UWP" />
 		<InternalsVisibleTo Include="Uno.Extensions.Hosting.WinUI" />
+		<InternalsVisibleTo Include="Uno.Extensions.Logging.Serilog" />
 
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
