--- a/src/Uno.Extensions.Logging.Serilog/Uno.Extensions.Logging.Serilog.csproj
+++ b/src/Uno.Extensions.Logging.Serilog/Uno.Extensions.Logging.Serilog.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Uno.Extensions.Core.UI\Uno.Extensions.Core.WinUI.csproj" />
     <ProjectReference Include="..\Uno.Extensions.Hosting\Uno.Extensions.Hosting.csproj" />
   </ItemGroup>
 
